tests/ui/static/raw-ref-deref-without-unsafe.stderr
error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> $DIR/raw-ref-deref-without-unsafe.rs:10:57
   |
LL | static mut DEREF_BYTE_PTR: *mut u8 = ptr::addr_of_mut!(*BYTE_PTR);
   |                                                         ^^^^^^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
